--- a/src/app/components/rating/rating.component.html
+++ b/src/app/components/rating/rating.component.html
@@ -1,1 +1,11 @@
-<p>rating works!</p>
+<div class="star-rating">
+    @for (star of stars; track star) {
+      <div class="star-wrapper">
+        <mat-icon class="empty-star">star_border</mat-icon>
+        <mat-icon
+          class="filled-star"
+          [style]="{ width: getStarFill(star) + '%' }"
+        >star</mat-icon>
+      </div>
+    }
+</div>
